# concurrent

./: .gitignore  AGENTS.md  CMakeLists.txt  build  index.html  readme.MD  trace.jsonl
.github/workflows/: deploy-gh-pages-subtree.yml
assets/: index-BHHQrrfu.css  index-BiIoqCXQ.js  index-ByGJQg4T.js  index-DW6VKWyF.css
include/: termin2.h  termin3.h  viz.h
include/examples/local/: termin1.h
include/littleBookOfSemaphores/: mutex.h  rendezvous.h
include/littleBookOfSemaphores/advanced/: deadlock.h  starvation.h
include/littleBookOfSemaphores/basic/: multiplex.h
include/littleBookOfSemaphores/common/: dining_philosophers.h  producer_consumer.h  smoking.h
include/utils/: watchdog.h
scenarios/deadlock/: trace.jsonl
scenarios/producer_consumer/: trace.jsonl
scenarios/rendezvous/: trace.jsonl
scenarios/smoking/: trace.jsonl
scenarios/starvation/: trace.jsonl
scripts/: extract_viz_nodes.py  generate_viz_scenarios.sh
src/: main.c  termin1.c  termin2.c  termin3.c  viz.c
src/examples/local/: termin1.c  termin2.c  termin3.c
src/littleBookOfSemaphores/: multiplex.c  mutex.c  rendezvous.c
src/littleBookOfSemaphores/advanced/: deadlock.c  starvation.c
src/littleBookOfSemaphores/basic/: multiplex.c  mutex.c  rendezvous.c
src/littleBookOfSemaphores/common/: dining_philosophers.c  producer_consumer.c  smoking.c
src/utils/: watchdog.c
theory/: 1.3-proces-i-nit.json  1.4-deljeno-stanje-sinhronizacija.json  1.6-context-switch-i-overhead.json  1.7-flynn-i-mimd.json  1.8-spregnuti-sistemi.json  concurrency-basics.json  hardver-i-mimd.json  osnovni-koncepti.json  procesi-niti-scheduler.json
tools/vizualize/: README.md  index.html  package-lock.json  package.json
tools/vizualize/public/sample/: trace.jsonl
tools/vizualize/public/theory/: 1.1-sta-je-konkurentnost.json  1.5-scheduler-i-interleaving.json  (+5 more)
tools/vizualize/scripts/: new-theory-map.mjs
tools/vizualize/src/: app.js  graph.js  loaders.js  main.jsx  model.js  replay.js  styles.css
(+13 files in other folders)
